@@ -1,15 +1,15 @@
 #################################################################################################
-#		OUTPUT
+#    OUTPUT
 #################################################################################################
 # this package provides an output module for the tool log2timeline.
 # The package takes as an input a hash that contains all the needed information to print or output
 # the timeline that has been produced by a format file
 #
 # Author: Kristinn Gudjonsson
-# Version : 0.8
-# Date : 18/07/11
+# Version : 0.9
+# Date : 13/05/12
 #
-# Copyright 2009-2011 Kristinn Gudjonsson (kristinn ( a t ) log2timeline (d o t) net)
+# Copyright 2009-2012 Kristinn Gudjonsson (kristinn ( a t ) log2timeline (d o t) net)
 #
 #  This file is part of log2timeline.
 #
@@ -35,7 +35,7 @@ use Getopt::Long;    # read parameters
 use Log2t::Common;
 
 # version number
-$VERSION = '0.8';
+$VERSION = '0.9';
 
 #       get_version
 # A simple subroutine that returns the version number of the format file
@@ -68,13 +68,22 @@ sub get_description() {
     return "Output timeline into a SQLite database";
 }
 
-#	print_header
+#  print_header
 #
 sub print_header() {
+    my $self = shift;
+
+    $self->_prepare_db();
+};
+
+sub _prepare_db() {
     my $self = shift;
     my $db_file;
     my $return = 1;
     my $sql;
+
+    # indicate that we've prepared the DB
+    $self->{'prepared'} = 1;
 
     # get the file name
     $db_file = $self->{'log_file'};
@@ -90,6 +99,11 @@ sub print_header() {
     $self->{'db'} =
       DBI->connect("dbi:SQLite:dbname=$db_file", "", "", { RaiseError => 1, AutoCommit => 1 })
       or $return = 0;
+
+    # small performance settings, makes the database more 'vulnerable' to crashes, that is crashes might make it
+    # less stable, but the performance increase outweigh the downside (at least IMHO).
+    $self->{'db'}->do('PRAGMA synchronous = OFF');
+    $self->{'db'}->do('PRAGMA journal_mode = MEMORY');
 
     # %t_line {
     #       time
@@ -116,69 +130,64 @@ sub print_header() {
 
     $sql = "
 CREATE TABLE IF NOT EXISTS records (
-	rid INTEGER PRIMARY KEY AUTOINCREMENT,
-	short TEXT,
-	detailed TEXT,
-	srcid INTEGER,
-	legacy INT,
-	inode INTEGER,
-	description TEXT,
-	time INTEGER,
-	user TEXT,
-	fid INTEGER,
-	sid INTEGER,
-	hid INTEGER,
-	hidden INT DEFAULT 0 )";
+  rid INTEGER PRIMARY KEY AUTOINCREMENT,
+  short TEXT,
+  detailed TEXT,
+  srcid INTEGER,
+  legacy INT,
+  inode INTEGER,
+  description TEXT,
+  time INTEGER,
+  user TEXT,
+  fid INTEGER,
+  sid INTEGER,
+  hid INTEGER,
+  hidden INT DEFAULT 0 )";
 
-    $self->{'db'}->do($sql) or $return = 0;
-
-    $sql = "CREATE INDEX record_time ON records(time)";
-    $self->{'db'}->do($sql) or $return = 0;
-    $sql = "CREATE INDEX user_name ON records(user)";
     $self->{'db'}->do($sql) or $return = 0;
 
     # create the filename table
     $sql = "
 CREATE TABLE IF NOT EXISTS filename (
-	fid INTEGER PRIMARY KEY AUTOINCREMENT,
-	filename TEXT
-	)";
+  fid INTEGER PRIMARY KEY AUTOINCREMENT,
+  filename TEXT
+  )";
     $self->{'db'}->do($sql) or $return = 0;
 
     # create the host table
     $sql = "
 CREATE TABLE IF NOT EXISTS host (
-	hid INTEGER PRIMARY KEY AUTOINCREMENT,
-	hostname TEXT,
-	description TEXT,
-	operating_system TEXT,
-	time_zone TEXT,
-	other_information TEXT
-	)";
+  hid INTEGER PRIMARY KEY AUTOINCREMENT,
+  hostname TEXT,
+  description TEXT,
+  operating_system TEXT,
+  time_zone TEXT,
+  other_information TEXT
+  )";
     $self->{'db'}->do($sql) or $return = 0;
 
     # create the "extra" table
     $sql = "
 CREATE TABLE IF NOT EXISTS extra (
-	eid INTEGER PRIMARY KEY AUTOINCREMENT,
-	rid INTEGER,
-	variable TEXT,
-	value TEXT 
-	)";
+  eid INTEGER PRIMARY KEY AUTOINCREMENT,
+  rid INTEGER,
+  variable TEXT,
+  value TEXT 
+  )";
 
     $self->{'db'}->do($sql) or $return = 0;
 
-    #	$sql ="CREATE INDEX record_atime ON records(atime)";
-    #	$self->{'db'}->do( $sql ) or $return = 0;
+    #  $sql ="CREATE INDEX record_atime ON records(atime)";
+    #  $self->{'db'}->do( $sql ) or $return = 0;
 
-    #	$sql ="CREATE INDEX record_mtime ON records(mtime)";
-    #	$self->{'db'}->do( $sql ) or $return = 0;
+    #  $sql ="CREATE INDEX record_mtime ON records(mtime)";
+    #  $self->{'db'}->do( $sql ) or $return = 0;
 
-    #	$sql ="CREATE INDEX record_ctime ON records(ctime)";
-    #	$self->{'db'}->do( $sql ) or $return = 0;
+    #  $sql ="CREATE INDEX record_ctime ON records(ctime)";
+    #  $self->{'db'}->do( $sql ) or $return = 0;
 
-    #	$sql ="CREATE INDEX record_crtime ON records(crtime)";
-    #	$self->{'db'}->do( $sql ) or $return = 0;
+    #  $sql ="CREATE INDEX record_crtime ON records(crtime)";
+    #  $self->{'db'}->do( $sql ) or $return = 0;
 
     $sql = "
 CREATE TABLE IF NOT EXISTS source (
@@ -206,25 +215,58 @@ tid INTEGER
     $self->{'db'}->do($sql) or $return = 0;
 
     $sql = "
-	CREATE TABLE IF NOT EXISTS super (
-	sid INTEGER PRIMARY KEY AUTOINCREMENT,
-	name TEXT,
-	description TEXT
-	)";
+  CREATE TABLE IF NOT EXISTS super (
+  sid INTEGER PRIMARY KEY AUTOINCREMENT,
+  name TEXT,
+  description TEXT
+  )";
     $self->{'db'}->do($sql) or $return = 0;
 
     $sql = "
-	CREATE TABLE IF NOT EXISTS info (
-	version TEXT,
-	tool TEXT,
-	ver_tool TEXT
-	)";
+  CREATE TABLE IF NOT EXISTS info (
+  version TEXT,
+  tool TEXT,
+  ver_tool TEXT
+  )";
     $self->{'db'}->do($sql) or $return = 0;
 
     # include information about the tool
     $sql = "INSERT INTO info (version,tool,ver_tool) VALUES( '$VERSION' , 'log2timeline', '"
       . Log2t::Common::get_version . '\')';
     $self->{'db'}->do($sql) or $return = 0;
+
+
+    # compile the INSERT command once, so it can be re-used
+    $sql =
+      q{INSERT INTO records (short,detailed,srcid,legacy,description,inode,time,user,fid,sid,hid,hidden) VALUES( ?,?,?,?,?,?,?,?,?,?,?,0)};
+    $self->{'insert_statement'} = $self->{'db'}->prepare($sql);
+
+    # compile a select statement once
+    $sql = q{SELECT rid FROM records ORDER BY rid DESC LIMIT 1};
+    $self->{'record_select'} = $self->{'db'}->prepare($sql);
+
+    $sql = q{INSERT INTO extra (rid,variable,value) VALUES( ?,?,? )};
+    $self->{'select_extra'} = $self->{'db'}->prepare($sql);
+
+    $sql = q{SELECT fid FROM filename WHERE filename = ?};
+    $self->{'select_filename'}  = $self->{'db'}->prepare($sql);
+    $sql = q{INSERT INTO filename (filename) VALUES( ? )};
+    $self->{'insert_filename'} = $self->{'db'}->prepare($sql);
+
+    $sql = q{SELECT hid FROM host WHERE hostname = ?};
+    $self->{'select_hid'} = $self->{'db'}->prepare($sql);
+    $sql = q{INSERT INTO host (hostname,time_zone,description) VALUES( ?,?,'no description' )};
+    $self->{'insert_host'} = $self->{'db'}->prepare($sql);
+
+    $sql = q{SELECT srcid FROM source WHERE name = ? AND detail = ?};
+    $self->{'select_srcid'} = $self->{'db'}->prepare($sql);
+    $sql = q{INSERT INTO source (name,detail,description) VALUES( ?, ?, 'no description' )};
+    $self->{'insert_source'} = $self->{'db'}->prepare($sql);
+
+    # now we will start a transaction
+    $self->{'db'}->{AutoCommit} = 1;
+    $self->{'db'}->begin_work;
+    $self->{'insert_counter'} = 0; # count nr. of inserts, flush every 1.000 records
 
     return $return;
 }
@@ -233,20 +275,31 @@ sub get_footer() {
     return 0;    # no footer
 }
 
+# The footer function is run after the tool completes, this means that all records have been processed.
+# That also means that we can now flush our transaction, and create indexes (since it is faster
+# to do that after inserting the data than before.
 sub print_footer() {
     my $self = shift;
+    my $sql = "";
+
+    $self->{'db'}->commit;
+    $sql = "CREATE INDEX record_time ON records(time)";
+    $self->{'db'}->do($sql) or return 0;
+    $sql = "CREATE INDEX user_name ON records(user)";
+    $self->{'db'}->do($sql) or return 0;
+
+    #$self->{'db'}->finish();
 
     $self->{'db'}->disconnect;
     return 1;
 }
 
-#      	print_line
+#        print_line
 # A subroutine that reads a line from the access file and returns it to the
 # main script
 # @return A string containing one line of the log file (or a -1 if we've reached
 #       the end of the log file)
 sub print_line() {
-
     # content of the timestamp object t_line
     # optional fields are marked with []
     #
@@ -276,10 +329,11 @@ sub print_line() {
     my $self   = shift;
     my $t_line = shift;
     my $sql;
-    my $sth;
     my $mactime;
-    my $sth;
     my $p2;
+
+    # run the DB prepare if we haven't already
+    $self->_prepare_db() unless $self->{'prepared'};
 
     #my %t_line = %{$ref};
     if (scalar(%{$t_line})) {
@@ -323,15 +377,10 @@ sub print_line() {
                 $p2 = '';
             }
 
-            # insert the record into the database
-            $sql =
-              q{INSERT INTO records (short,detailed,srcid,legacy,description,inode,time,user,fid,sid,hid,hidden) VALUES( ?,?,?,?,?,?,?,?,?,?,?,0)};
-            $sth = $self->{'db'}->prepare($sql);
-
             # execute the query
             my @iarray = split(/-/, $t_line->{'inode'});
 
-            $sth->execute(
+            $self->{'insert_statement'}->execute(
                 $t_line->{'short'},
 
                 #$self->{'db'}->quote( $t_line->{'short'} ),
@@ -352,15 +401,24 @@ sub print_line() {
                 int($self->{'file'}->{'fid'}),
                 0,
                 int($self->{'host'}->{'hid'}),
-                         );
+            );
+            if ($self->{'insert_counter'} ge 1000) {
+                $self->{'insert_counter'} = 0;
+                $self->{'db'}->commit;
+                $self->{'db'}->{AutoCommit} = 1;
+                $self->{'db'}->begin_work;
+            }
+            else {
+                $self->{'insert_counter'}++;
+            }
 
+            $self->{'insert_statement'}->finish;
         }
 
-        $sql = q{SELECT rid FROM records ORDER BY rid DESC LIMIT 1};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute();
+        $self->{'record_select'}->execute();
 
-        my @temp = $sth->fetchrow_array;
+        my @temp = $self->{'record_select'}->fetchrow_array;
+        $self->{'record_select'}->finish();
         my $sid  = $temp[0];
 
         # go through the extra field (need that last sid value)
@@ -375,11 +433,8 @@ sub print_line() {
             next if $i eq 'parse_dir';
             next if $i eq 'format';
 
-            $sql = q{INSERT INTO extra (rid,variable,value) VALUES( ?,?,? )};
-            $sth = $self->{'db'}->prepare($sql);
-
             # execute it
-            $sth->execute(
+            $self->{'insert_extra'}->execute(
                 $sid,
 
                 #$self->{'db'}->quote( $i ),
@@ -413,34 +468,28 @@ This database can then be read by any tool capable of reading SQLite databases.\
 sub _get_fid {
     my $self    = shift;
     my $file_in = shift;
-    my ($sth, $sql);
+    my $sql;
     my @store;
 
     # query the db
-    $sql = q{SELECT fid FROM filename WHERE filename = ?};
-    $sth = $self->{'db'}->prepare($sql);
-    $sth->execute($file_in);
+    $self->{'select_filename'}->execute($file_in);
 
     $self->{'file'}->{'name'} = $file_in;
 
     # check if we get any answer
-    if ($sth->rows eq 1) {
-        @store = $sth->fetchrow_array;
+    if ($self->{'select_filename'}->rows eq 1) {
+        @store = $self->{'select_filename'}->fetchrow_array;
         $self->{'file'}->{'fid'} = $store[0];
     }
     else {
 
         # no file, create one
-        $sql = q{INSERT INTO filename (filename) VALUES( ? )};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($file_in);
+        $self->{'insert_filename'}->execute($file_in);
 
         # get the ID
-        $sql = q{SELECT fid FROM filename WHERE filename = ?};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($file_in);
+        $self->{'select_filename'}->execute($file_in);
 
-        @store = $sth->fetchrow_array;
+        @store = $self->{'select_filename'}->fetchrow_array;
         $self->{'file'}->{'fid'} = $store[0];
     }
 
@@ -450,37 +499,31 @@ sub _get_fid {
 sub _get_hid {
     my $self      = shift;
     my $host_name = shift;
-    my ($sth, $sql);
+    my $sql;
     my @store;
 
     # get the time zone value
     my $tz = $self->{'tz'};
 
     # query the db
-    $sql = q{SELECT hid FROM host WHERE hostname = ?};
-    $sth = $self->{'db'}->prepare($sql);
-    $sth->execute($host_name);
+    $self->{'select_hid'}->execute($host_name);
 
     $self->{'host'}->{'name'} = $host_name;
 
     # check if we get any answer
-    if ($sth->rows eq 1) {
-        @store = $sth->fetchrow_array;
+    if ($self->{'select_hid'}->rows eq 1) {
+        @store = $self->{'select_hid'}->fetchrow_array;
         $self->{'host'}->{'hid'} = $store[0];
     }
     else {
 
         # no host, create one
-        $sql = q{INSERT INTO host (hostname,time_zone,description) VALUES( ?,?,'no description' )};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($host_name, $tz);
+        $self->{'insert_host'}->execute($host_name, $tz);
 
         # get the ID
-        $sql = q{SELECT hid FROM host WHERE hostname = ?};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($host_name);
+        $self->{'select_hid'}->execute($host_name);
 
-        @store = $sth->fetchrow_array;
+        @store = $self->{'select_hid'}->fetchrow_array;
         $self->{'host'}->{'hid'} = $store[0];
     }
 
@@ -491,35 +534,29 @@ sub _get_sid {
     my $self        = shift;
     my $source_name = shift;
     my $source_type = shift;
-    my ($sth, $sql);
+    my $sql;
     my @store;
 
     # query the db
-    $sql = q{SELECT srcid FROM source WHERE name = ? AND detail = ?};
-    $sth = $self->{'db'}->prepare($sql);
-    $sth->execute($source_name, $source_type);
+    $self->{'select_srcid'}->execute($source_name, $source_type);
 
     $self->{'source'}->{'name'}   = $source_name;
     $self->{'source'}->{'detail'} = $source_type;
 
     # check if we get any answer
-    if ($sth->rows eq 1) {
-        @store = $sth->fetchrow_array;
+    if ($self->{'select_srcid'}->rows eq 1) {
+        @store = $self->{'select_srcid'}->fetchrow_array;
         $self->{'source'}->{'srcid'} = $store[0];
     }
     else {
 
         # no host, create one
-        $sql = q{INSERT INTO source (name,detail,description) VALUES( ?, ?, 'no description' )};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($source_name, $source_type);
+        $self->{'insert_source'}->execute($source_name, $source_type);
 
         # get the ID
-        $sql = q{SELECT srcid FROM source WHERE name = ? AND detail = ?};
-        $sth = $self->{'db'}->prepare($sql);
-        $sth->execute($source_name, $source_type);
+        $self->{'select_srcid'}->execute($source_name, $source_type);
 
-        @store = $sth->fetchrow_array;
+        @store = $self->{'select_srcid'}->fetchrow_array;
         $self->{'source'}->{'srcid'} = $store[0];
     }
 
